# ViMusic-Converter

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  setup.py  shell.nix  vimusic-converter.py
src/vimusic_converter/: spotify.py  vimusic_converter.py
src/vimusic_converter/__pycache__/: dbhandler.d.er  spotify.d.er
vimusic_converter/: __init__.py  __main__.py
