[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vimusic-converter"
authors = [
  { name = "nulladmin1", email = "shrey.deogade@protonmail.com" },
]
description = "Convert ViMusic playlists into playlists for other platforms. "
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
  "python-dotenv",
  "requests",
  "spotipy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Homepage = "https://github.com/nulladmin1/ViMusic-Converter/"

[project.scripts]
vimusic_converter = "vimusic_converter.vimusic_converter:main"

[tool.setuptools.dynamic]
version = {file = "version"}
